# LitPubMed

./: .env.example  README.md  pyproject.toml
docs/: README.md  cli.md  http-api.md  notes.md  setup.md
litpubmed/: __init__.py  api_server.py  banner.py  cli.py  config.py  db.py  edirect.py  llm.py  service.py  synthesis_tables.py  term_links.py  terminal_table.py
scripts/: setup_venv.sh  setup_venv_fedora.sh
